{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 356,
  "lineage": "082d5571-1d0a-b605-38c4-11837e10bbac",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-11-01T05:46:25.888-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gold-subset-366105/global/firewalls/test-firewall",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "test-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/networks/test-network",
            "priority": 65534,
            "project": "gold-subset-366105",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/firewalls/test-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_ilb_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-01T05:46:26.041-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gold-subset-366105/global/firewalls/egress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "egress",
            "network": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/networks/test-network",
            "priority": 1000,
            "project": "gold-subset-366105",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/firewalls/egress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "allow-all"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/zones/asia-south1-a/disks/terraform-instanc-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gold-subset-366105/zones/asia-south1-a/instances/terraform-instanc-1",
            "instance_id": "4690679880458479279",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "mAI6Jbh71FI=",
            "metadata_startup_script": " #! /bin/bash\n      sudo apt update\n      sudo apt install -y telnet \n      sudo apt install -y apache2\n     sudo apt install docker.io -y\n      sudo apt install mysql-client -y\n  sudo usermod -a -G docker ubuntu\n  docker pull wordpress\n  docker run --name somewordpress -p 8080:80 -d wordpress\n  docker start somewordpress\n  ",
            "name": "terraform-instanc-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.7.52",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/networks/test-network",
                "network_ip": "10.160.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/regions/asia-south1/subnetworks/test-network",
                "subnetwork_project": "gold-subset-366105"
              }
            ],
            "project": "gold-subset-366105",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/zones/asia-south1-a/instances/terraform-instanc-1",
            "service_account": [
              {
                "email": "access-terraform@gold-subset-366105.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20221018",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/zones/asia-south1-a/disks/terraform-instanc-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/gold-subset-366105/zones/asia-south1-a/instances/terraform-instanc-2",
            "instance_id": "3548068492090320592",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "mAI6Jbh71FI=",
            "metadata_startup_script": " #! /bin/bash\n      sudo apt update\n      sudo apt install -y telnet \n      sudo apt install -y apache2\n     sudo apt install docker.io -y\n      sudo apt install mysql-client -y\n  sudo usermod -a -G docker ubuntu\n  docker pull wordpress\n  docker run --name somewordpress -p 8080:80 -d wordpress\n  docker start somewordpress\n  ",
            "name": "terraform-instanc-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.57.200",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/networks/test-network",
                "network_ip": "10.160.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/regions/asia-south1/subnetworks/test-network",
                "subnetwork_project": "gold-subset-366105"
              }
            ],
            "project": "gold-subset-366105",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/zones/asia-south1-a/instances/terraform-instanc-2",
            "service_account": [
              {
                "email": "access-terraform@gold-subset-366105.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gold-subset-366105/global/networks/test-network",
            "mtu": 0,
            "name": "test-network",
            "project": "gold-subset-366105",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gold-subset-366105/global/networks/test-network"
          }
        }
      ]
    }
  ]
}